package handler

import (
	"context"
	pb "thaily/proto/council"
)


func (h *Handler) CreateCouncil(ctx context.Context, req *pb.CreateCouncilRequest) (*pb.CreateCouncilResponse, error) {
	// TODO: Implement CreateCouncil
	return &pb.CreateCouncilResponse{}, nil
}

func (h *Handler) GetCouncil(ctx context.Context, req *pb.GetCouncilRequest) (*pb.GetCouncilResponse, error) {
	// TODO: Implement GetCouncil
	return &pb.GetCouncilResponse{}, nil
}

func (h *Handler) UpdateCouncil(ctx context.Context, req *pb.UpdateCouncilRequest) (*pb.UpdateCouncilResponse, error) {
	// TODO: Implement UpdateCouncil
	return &pb.UpdateCouncilResponse{}, nil
}

func (h *Handler) DeleteCouncil(ctx context.Context, req *pb.DeleteCouncilRequest) (*pb.DeleteCouncilResponse, error) {
	// TODO: Implement DeleteCouncil
	return &pb.DeleteCouncilResponse{}, nil
}

func (h *Handler) ListCouncils(ctx context.Context, req *pb.ListCouncilsRequest) (*pb.ListCouncilsResponse, error) {
	// TODO: Implement ListCouncils
	return &pb.ListCouncilsResponse{}, nil
}

