package handler

import (
	"context"
	pb "thaily/proto/council"
)


func (h *Handler) CreateDefence(ctx context.Context, req *pb.CreateDefenceRequest) (*pb.CreateDefenceResponse, error) {
	// TODO: Implement CreateDefence
	return &pb.CreateDefenceResponse{}, nil
}

func (h *Handler) GetDefence(ctx context.Context, req *pb.GetDefenceRequest) (*pb.GetDefenceResponse, error) {
	// TODO: Implement GetDefence
	return &pb.GetDefenceResponse{}, nil
}

func (h *Handler) UpdateDefence(ctx context.Context, req *pb.UpdateDefenceRequest) (*pb.UpdateDefenceResponse, error) {
	// TODO: Implement UpdateDefence
	return &pb.UpdateDefenceResponse{}, nil
}

func (h *Handler) DeleteDefence(ctx context.Context, req *pb.DeleteDefenceRequest) (*pb.DeleteDefenceResponse, error) {
	// TODO: Implement DeleteDefence
	return &pb.DeleteDefenceResponse{}, nil
}

func (h *Handler) ListDefences(ctx context.Context, req *pb.ListDefencesRequest) (*pb.ListDefencesResponse, error) {
	// TODO: Implement ListDefences
	return &pb.ListDefencesResponse{}, nil
}

