package handler

import (
	"context"
	pb "thaily/proto/council"
)


func (h *Handler) ListGradeDefenceCriteria(ctx context.Context, req *pb.ListGradeDefenceCriteriaRequest) (*pb.ListGradeDefenceCriteriaResponse, error) {
	// TODO: Implement ListGradeDefenceCriteria
	return &pb.ListGradeDefenceCriteriaResponse{}, nil
}

